manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "borak8s-a2de"
    labels:
        app: "borak8s-a2de"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: boraarat-borak8s-a2de.50d06d3bea9c4f7fb7d8.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "borak8s-a2de"
                servicePort: 8080
